# ProtoGenius

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/agents/: algo-first-principles.md  alignment-reporter.md  demo-builder.md  doc-writer-srs.md  doc-writer-tdd.md  insight-writer.md  kb-connector.md  layer-doc-writer.md  profile-selector.md  requirement-clarifier.md  research-synthesizer.md  researcher-academic.md  researcher-github.md  researcher-industry.md  scope-router.md  tech-stack-analyzer.md  tester.md
.cursor/commands/: abort-run.md  confirm-docs.md  confirm-research.md  show-quota.md  start-task.md
.cursor/hooks/: README.md  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
config/: default.yaml  models.yaml  quotas.yaml  search.yaml
docs/: architecture.md  compliance.md  configuration.md  four-layer-docs.md  insight-reports.md  knowledge-base.md  mcp-integration.md  profiles.md  state-machine.md  usage.md
examples/: sample_task.md  sample_task.v2.yaml
protogenius/: __init__.py  __main__.py  audit.py  cli.py  config.py  context.py  coverage.py  llm.py  orchestrator.py  quotas.py  state_machine.py  task_input.py
templates/: arch_diagram.md  insight_academic.md  insight_enterprise.md  insight_oss.md  layer_l1_foundation_theory.md  layer_l2_atomic_algorithm.md  layer_l3_tech_topic.md  layer_l4_ai_application.md  research_summary.md  srs_ieee29148.md  tdd_ieee29148.md  test_plan.md  test_report.md
tests/: conftest.py  test_alignment.py  test_audit.py  test_config.py  test_coverage_note.py  test_demo_selector.py  test_github_ranking.py  test_hooks.py  test_insights.py  test_kb.py  test_layer_docs.py  test_llm.py  test_orchestrator.py  test_profile_orchestrator.py  test_quotas.py  test_research_dedup.py  test_scope_router.py  test_state_machine.py  test_task_input.py  test_test_generation.py
(+100 files in other folders)
