[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protogenius"
version = "0.1.0"
description = "ProtoGenius — Autonomous Research-to-Prototype Agent for Task Validation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ProtoGenius Contributors" }]
keywords = [
    "agent",
    "prototype",
    "research",
    "cursor",
    "cloud-agent",
    "mcp",
    "ieee-29148",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
protogenius = "protogenius.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["protogenius*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]  # B008: Typer relies on call-in-default for Option/Argument.

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
